# culculator

./: culculator.sln
culculator/: CMakeLists.txt  calc.cpp  calc.h  calc_tests.cpp  culculator.vcxproj  culculator.vcxproj.filters  date.cpp  date.h  date_tests.cpp  employee.cpp  employee.h  employee_tests.cpp
